<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <com.CalSocial.widget.CalSocialTextView
        android:id="@+id/tagLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideLine1"
        app:text="@string/tag_line"
        app:text_color="@color/darkGray" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tagGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="47dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.CalSocial.widget.CalSocialEditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagGuideLine"
        app:type_label="first_name" />


    <com.CalSocial.widget.CalSocialEditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        app:type_label="last_name" />

    <com.CalSocial.widget.CalSocialEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:type_label="phone" />

    <LinearLayout
        android:id="@+id/agreePolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone">

        <TextView
            android:id="@+id/agreePolicyPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hk_grotesk_regular"
            android:text="@string/agreement_pre"
            android:textColor="@color/darkGray"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/agreeTermsLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_5"
                android:fontFamily="@font/hk_grotesk_regular"
                android:text="@string/agreement_terms"
                android:textColor="@color/dirtyBlue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_5"
                android:fontFamily="@font/hk_grotesk_regular"
                android:text="@string/amp"
                android:textColor="@color/darkGray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/agreePolicyLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hk_grotesk_regular"
                android:text="@string/agreement_privacy"
                android:textColor="@color/dirtyBlue"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <com.CalSocial.widget.CalSocialButton
        android:id="@+id/agreeContinue"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        app:button_text="@string/agree_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreePolicy" />

    <TextView
        android:id="@+id/signInLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/avenir_black"
        android:gravity="center"
        android:padding="@dimen/dp_15"
        android:text="@string/login_text"
        android:textColor="@color/dirtyBlue"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreeContinue" />


</androidx.constraintlayout.widget.ConstraintLayout>
