<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">


            <TextView
                android:id="@+id/addToFavorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/hk_grotesk_regular"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_20"
                android:text="@string/add_to_favorites"
                android:textColor="@color/dirtyBlue"
                android:textSize="18sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/lightGray" />

            <TextView
                android:id="@+id/changeHiveStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/hk_grotesk_regular"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_20"
                android:text="@string/change_hive_status"
                android:textColor="@color/dirtyBlue"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/lightGray" />

            <TextView
                android:id="@+id/removeFromHive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/hk_grotesk_regular"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_20"
                android:text="@string/remove_from_hive"
                android:textColor="@color/red"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/lightGray" />


            <TextView
                android:id="@+id/blockUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/hk_grotesk_regular"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_20"
                android:text="@string/block"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/lightGray" />


            <TextView
                android:id="@+id/cancelContactChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:fontFamily="@font/hk_grotesk_regular"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_20"
                android:text="@string/cancel"
                android:textColor="@color/dirtyBlue"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
