<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">


            <TextView
                android:id="@+id/alertTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_20"
                android:fontFamily="@font/hk_grotesk_regular"
                android:text="@string/event_invite_sent"
                android:textColor="@color/dirtyBlue"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/alertText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:gravity="center|center_vertical"
                android:padding="@dimen/dp_20"
                android:fontFamily="@font/hk_grotesk_medium"
                android:text="@string/expect_to_receive"
                android:textColor="@color/gray"
                android:textSize="20sp" />


            <com.CalSocial.widget.CalSocialButton
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_50"
                android:paddingRight="@dimen/dp_50"
                app:button_text="@string/continue_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintVertical_bias="0.173" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
