<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="18dp"
    tools:layout_editor_absoluteY="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp" />

        <com.CalSocial.widget.CalSocialTextView
            android:id="@+id/tagLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideLine1"
            app:text="@string/verification"
            app:text_color="@color/darkGray" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/tagGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="80dp"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/code_digits"
            layout="@layout/onboarding_phone_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tagGuideLine" />


        <LinearLayout
            android:id="@+id/resendCodeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_digits">

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hk_grotesk_regular"
                android:text="@string/didnt_receive_code"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/hk_grotesk_regular"
                android:text="@string/resend_code"
                android:textColor="@color/dirtyBlue"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>


        <com.CalSocial.widget.CalSocialButton
            android:id="@+id/phoneContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            app:button_text="@string/continue_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resendCodeTv"
            app:layout_constraintVertical_bias="0.173" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
